[project]
name = "lang-chain-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-openai>=0.2.8",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]
